core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_html_feeds.snap
---
source: core/src/collection/tests.rs
expression: collection
---
version: 0.1.0
length: 6
value:
  - id: 0
    entity:
      uri: "https://example.com/"
      createdAt: 1609459200
      updatedAt: []
      names:
        - Example Website
      labels:
        - example
      shared: true
      toread: false
      isFeed: false
    edges: []
  - id: 1
    entity:
      uri: "https://feeds.feedburner.com/oreilly/radar"
      createdAt: 1609545600
      updatedAt: []
      names:
        - "O'Reilly Radar"
      labels:
        - RSS Feeds
        - books
        - tech
      extended: Technology insights and trends
      shared: true
      toread: false
      isFeed: true
    edges: []
  - id: 2
    entity:
      uri: "https://planet.ocaml.org/rss.xml"
      createdAt: 1609632000
      updatedAt: []
      names:
        - Planet OCaml
      labels:
        - RSS Feeds
        - functional
        - ocaml
      extended: OCaml community blog aggregator
      shared: true
      toread: false
      isFeed: true
    edges: []
  - id: 3
    entity:
      uri: "https://this-week-in-rust.org/rss.xml"
      createdAt: 1609718400
      updatedAt: []
      names:
        - This Week in Rust
      labels:
        - RSS Feeds
        - rust
        - weekly
      shared: true
      toread: false
      isFeed: true
    edges: []
  - id: 4
    entity:
      uri: "https://github.com/"
      createdAt: 1609891200
      updatedAt: []
      names:
        - GitHub
      labels:
        - Regular Sites
        - git
        - programming
      shared: true
      toread: false
      isFeed: false
    edges: []
  - id: 5
    entity:
      uri: "https://news.ycombinator.com/"
      createdAt: 1609977600
      updatedAt: []
      names:
        - Hacker News
      labels:
        - Regular Sites
        - news
        - tech
      shared: true
      toread: false
      lastVisitedAt: 1610064000
      isFeed: false
    edges: []
