core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_html_folders.snap
---
source: core/src/collection/tests.rs
expression: collection
---
version: 0.1.0
length: 7
value:
  - id: 0
    entity:
      uri: "https://example.com/"
      createdAt: 1609459200
      updatedAt: []
      names:
        - Example Website
      labels:
        - example
      shared: true
      toRead: false
      isFeed: false
    edges: []
  - id: 1
    entity:
      uri: "https://github.com/"
      createdAt: 1609545600
      updatedAt: []
      names:
        - GitHub
      labels:
        - Programming
        - git
        - hosting
      shared: true
      toRead: false
      isFeed: false
      extended: Code hosting and collaboration
    edges: []
  - id: 2
    entity:
      uri: "https://gitlab.com/"
      createdAt: 1609632000
      updatedAt: []
      names:
        - GitLab
      labels:
        - Programming
        - git
        - hosting
      shared: true
      toRead: false
      isFeed: false
    edges: []
  - id: 3
    entity:
      uri: "https://ocaml.org/"
      createdAt: 1609718400
      updatedAt: []
      names:
        - OCaml
      labels:
        - Languages
        - Programming
        - functional
        - ml
      shared: true
      toRead: false
      isFeed: false
      extended: Industrial-strength functional programming
    edges: []
  - id: 4
    entity:
      uri: "https://www.rust-lang.org/"
      createdAt: 1609804800
      updatedAt: []
      names:
        - Rust
      labels:
        - Languages
        - Programming
        - safety
        - systems
      shared: true
      toRead: false
      isFeed: false
    edges: []
  - id: 5
    entity:
      uri: "https://news.ycombinator.com/"
      createdAt: 1609977600
      updatedAt: []
      names:
        - Hacker News
      labels:
        - News
        - startup
        - tech
      shared: false
      toRead: false
      isFeed: false
    edges: []
  - id: 6
    entity:
      uri: "https://lobste.rs/"
      createdAt: 1610064000
      updatedAt: []
      names:
        - Lobsters
      labels:
        - News
        - programming
        - tech
      shared: true
      toRead: false
      isFeed: false
    edges: []
