core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_html_simple.snap
---
source: core/src/collection/tests.rs
expression: collection
---
version: 0.1.0
length: 3
value:
  - id: 0
    entity:
      uri: "https://example.com/"
      createdAt: 1609459200
      updatedAt:
        - 1609459200
      names:
        - Example Website
      labels:
        - example
        - test
      extended: A simple example website for testing
      shared: true
      toRead: false
      isFeed: false
    edges: []
  - id: 1
    entity:
      uri: "https://github.com/"
      createdAt: 1609545600
      updatedAt: []
      names:
        - GitHub
      labels:
        - git
        - programming
      extended: Code hosting platform
      shared: true
      toRead: false
      lastVisitedAt: 1609632000
      isFeed: false
    edges: []
  - id: 2
    entity:
      uri: "https://news.ycombinator.com/"
      createdAt: 1609632000
      updatedAt: []
      names:
        - Hacker News
      labels:
        - news
      shared: false
      toRead: false
      isFeed: false
    edges: []
