core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_to_html_feeds.snap
---
source: core/src/collection/tests.rs
expression: generated_html
---
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1>Bookmarks</H1>
<DL><p>
    <DT><A HREF="https://example.com/" ADD_DATE="1609459200" TAGS="example">Example Website</A>
    <DT><A HREF="https://feeds.feedburner.com/oreilly/radar" ADD_DATE="1609545600" TAGS="RSS Feeds,books,tech" FEED="true">O'Reilly Radar</A>
    <DD>Technology insights and trends
    <DT><A HREF="https://planet.ocaml.org/rss.xml" ADD_DATE="1609632000" TAGS="RSS Feeds,functional,ocaml" FEED="true">Planet OCaml</A>
    <DD>OCaml community blog aggregator
    <DT><A HREF="https://this-week-in-rust.org/rss.xml" ADD_DATE="1609718400" TAGS="RSS Feeds,rust,weekly" FEED="true">This Week in Rust</A>
    <DT><A HREF="https://github.com/" ADD_DATE="1609891200" TAGS="Regular Sites,git,programming">GitHub</A>
    <DT><A HREF="https://news.ycombinator.com/" ADD_DATE="1609977600" TAGS="Regular Sites,news,tech" LAST_VISIT="1610064000">Hacker News</A>
</DL><p>
