core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_to_html_folders.snap
---
source: core/src/collection/tests.rs
expression: generated_html
---
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1>Bookmarks</H1>
<DL><p>
    <DT><A HREF="https://example.com/" ADD_DATE="1609459200" TAGS="example">Example Website</A>
    <DT><A HREF="https://github.com/" ADD_DATE="1609545600" TAGS="Programming,git,hosting">GitHub</A>
    <DD>Code hosting and collaboration
    <DT><A HREF="https://gitlab.com/" ADD_DATE="1609632000" TAGS="Programming,git,hosting">GitLab</A>
    <DT><A HREF="https://ocaml.org/" ADD_DATE="1609718400" TAGS="Languages,Programming,functional,ml">OCaml</A>
    <DD>Industrial-strength functional programming
    <DT><A HREF="https://www.rust-lang.org/" ADD_DATE="1609804800" TAGS="Languages,Programming,safety,systems">Rust</A>
    <DT><A HREF="https://news.ycombinator.com/" ADD_DATE="1609977600" TAGS="News,startup,tech" PRIVATE="1">Hacker News</A>
    <DT><A HREF="https://lobste.rs/" ADD_DATE="1610064000" TAGS="News,programming,tech">Lobsters</A>
</DL><p>
