core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_to_html_pinboard.snap
---
source: core/src/collection/tests.rs
expression: generated_html
---
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1>Bookmarks</H1>
<DL><p>
    <DT><A HREF="http://c-faq.com/decl/spiral.anderson.html" ADD_DATE="1653114361" TAGS="c,c++">Clockwise/Spiral Rule</A>
    <DT><A HREF="https://docs.microsoft.com/en-us/sysinternals/downloads/procmon" ADD_DATE="1606184699" TAGS="windows-dev" PRIVATE="1">Process Monitor - Windows Sysinternals | Microsoft Docs</A>
    <DD>Monitor file system, Registry, process, thread and DLL activity in real-time.
    <DT><A HREF="https://www.intel.com/content/www/us/en/developer/tools/oneapi/vtune-profiler.html" ADD_DATE="1649855530" TAGS="performance,profiling,tools" PRIVATE="1" TOREAD="1">Fix Performance Bottlenecks with Intel® VTune™ Profiler</A>
</DL><p>
