core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_to_html_privacy.snap
---
source: core/src/collection/tests.rs
expression: generated_html
---
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1>Bookmarks</H1>
<DL><p>
    <DT><A HREF="https://example.com/" ADD_DATE="1609459200" TAGS="example,public">Public Example</A>
    <DD>This bookmark is public (PRIVATE="0")
    <DT><A HREF="https://internal.company.com/" ADD_DATE="1609545600" TAGS="internal,work" PRIVATE="1">Internal Company Site</A>
    <DD>This bookmark is private (PRIVATE="1")
    <DT><A HREF="https://github.com/" ADD_DATE="1609632000" TAGS="programming">GitHub (no privacy flag)</A>
    <DD>This bookmark has no privacy flag (defaults to public)
    <DT><A HREF="https://secret-project.example.com/" ADD_DATE="1609718400" TAGS="project,secret" PRIVATE="1" LAST_VISIT="1609804800">Secret Project</A>
    <DD>Private bookmark with last visit time
    <DT><A HREF="https://public-feed.example.com/rss" ADD_DATE="1609891200" TAGS="feed,public" FEED="true">Public RSS Feed</A>
    <DD>Public feed bookmark
    <DT><A HREF="https://private-feed.example.com/rss" ADD_DATE="1609977600" TAGS="feed,private" PRIVATE="1" FEED="true">Private RSS Feed</A>
    <DD>Private feed bookmark
</DL><p>
