core/src/collection/snapshots/hbt_core__collection__tests__html_tests__snapshot_to_html_simple.snap
---
source: core/src/collection/tests.rs
expression: generated_html
---
<!DOCTYPE NETSCAPE-Bookmark-file-1>
<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
<TITLE>Bookmarks</TITLE>
<H1>Bookmarks</H1>
<DL><p>
    <DT><A HREF="https://example.com/" ADD_DATE="1609459200" LAST_MODIFIED="1609459200" TAGS="example,test">Example Website</A>
    <DD>A simple example website for testing
    <DT><A HREF="https://github.com/" ADD_DATE="1609545600" TAGS="git,programming" LAST_VISIT="1609632000">GitHub</A>
    <DD>Code hosting platform
    <DT><A HREF="https://news.ycombinator.com/" ADD_DATE="1609632000" TAGS="news" PRIVATE="1">Hacker News</A>
</DL><p>
